# madr

./: README.md  compose.yaml  pyproject.toml  script.md  script.sh
backend/: Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
backend/mader/: app.py  database.py  exceptions.py  models.py  schemas.py  security.py  settings.py  utils.py
backend/mader/routes/: autentica.py  conta.py  token.py
backend/migrations/: env.py
backend/migrations/versions/: 462947d7bf8c_create_users_table.py  578922c80d12_create_users_table.py  81d4c5acbc7f_initial.py  d2b8ffe4ee68_create_users_table.py
backend/tests/: conftest.py  factories.py  test_app.py  test_autentica.py  test_conta.py  test_database.py  test_db.py  test_security.py  test_token.py  test_users.py  test_utils.py
deploy/: values.yaml
deploy/charts/backend/: Chart.yaml  values.yaml
deploy/charts/backend/templates/: deployment.yaml  secret.yaml  service.yaml
deploy/charts/database/: Chart.yaml  values.yaml
deploy/charts/database/templates/: deployment.yaml  pv.yaml  pvc.yaml  secret.yaml  service.yaml
deploy/charts/frontend/: Chart.yaml  values.yaml
deploy/charts/frontend/templates/: deployment.yaml
deploy/templates/: ingress.yaml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: HelloWorld.vue  SiteNav.vue
frontend/src/router/: index.js
frontend/src/views/: AccountView.vue  HomeView.vue  NovelistView.vue
